--- a/index1.html
+++ b/index1.html
@@ -4,31 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <style>
-        .D {
-            background: blue;
-            height: 70px
-            
-        }
-        .block {
-            background:blue;
-            height: 70px;
-            width: 150px;
-            display: inline-block;
-            text-align: center;
-            line-height: 65px;
-            border-right: 5px solid black;
-        }
-        .block1 {
-            background: blue;
-            height: 70px;
-        }
-        a {
-            font-size: 25px;
-            color: white;
-            
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="D">
