--- a/index1.html
+++ b/index1.html
@@ -20,6 +20,10 @@
         <div class="block">
             <a href="">Contacts</a>
         </div>
+        <div>
+            <img src="img/images.jpg" alt="foto1">
+        </div>
+        
 
     </div>
 </body>
