--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Contact</h2>
-    <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Ut, laboriosam quo itaque iste sequi odio mollitia iusto quibusdam exercitationem inventore dolor possimus officiis quidem. Eius asperiores excepturi quis temporibus quasi.</p>
+    <p>Lorem ipsum dolor, sit  consectetur adipisicing elit. Ut, laboriosam quo itaque iste sequi odio mollitia iusto quibusdam exercitationem inventore dolor possimus officiis quidem. Eius asperiores excepturi quis temporibus quasi.</p>
     
 </body>
 </html>
